--- a/e-commerce/Index.html
+++ b/e-commerce/Index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    
     <title>e-commerce</title>
 </head>
 
@@ -32,13 +36,27 @@
            <h2>Productos</h2>
            <div class="flex-container">
             <div class="card">
-
+                <img src="assets/img/product1.jpg" alt="Product 1">
+                <h3>Product 1</h3>
+                <p>Description of Product 1.</p>
+                <p>Price: $10.00</p>
+                <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="card">
-
-                
+                <img src="assets/img/product2.jpg" alt="Product 2">
+                <h3>Product 2</h3>
+                <p>Description of Product 2.</p>
+                <p>Price: $10.00</p>
+                <button class="add-to-cart">Add to Cart</button>
             </div>
 
+            <div class="card">
+                <img src="assets/imag/product3.jpg" alt="Product 3">
+                <h3>Product 3</h3>
+                <p>Description of Product 3.</p>
+                <p>Price: $10.00</p>
+                <button class="add-to-cart">Add to Cart</button>
+            </div>
            </div>
         </section>
         <!----------------------------------------------------------------------->
